--- a/config.yml
+++ b/config.yml
@@ -10,5 +10,6 @@ include:
   - README.md
   - TimeSeries.md
 
+markdown: kramdown
 - name: fastpages: An easy to use blogging platform with support for Jupyter Notebooks.
 uses: fastai/fastpages@v2.1.5
